syntax = "proto3";
import "solidity.proto";
package api;

service P2pim {
  rpc GetInfo (GetInfoRequest) returns (GetInfoResponse);
}

message GetInfoRequest {
}

message GetInfoResponse {
  solidity.Address address = 1;
  repeated BalanceEntry balance = 2;
}

message BalanceEntry {
  TokenInfo token = 1;
  solidity.Uint256 available = 2;
  solidity.Uint256 allowed = 3;
  solidity.Uint256 supplied = 4;
}

message TokenInfo {
  solidity.Address token_address = 1;
  string name = 2;
  string symbol = 3;
  uint32 decimals = 4;
}
